--- a/Dokumentation/content/Content.tex
+++ b/Dokumentation/content/Content.tex
@@ -6,7 +6,7 @@ The Matlab and Simulink code is in the Matlab subfolder and the ASCET project is
 Simulink settings:
 The report is structured by devoting one chapter to each requirement.
 
-In ASCET mainly graphical programming using block diagrams is used due to requirement D7. Even though D8 does not demand graphical programming, for consistency reasons D8 is being graphically modelled as well. Exceptions are the unit tests. The test are programmed in ESDL because some test have a lot of test cases which would lead to a huge block diagram that would likely be unclear. 
+In ASCET mainly graphical programming using block diagrams is used due to requirement D7. Even though D8 does not demand graphical programming, for consistency reasons D8 is being graphically modelled as well. Exceptions are the unit tests. The test are programmed in ESDL because some test have a lot of test cases which would lead to a large block diagram that would likely be unclear. 
 
 Simulink: ode8 most precise runge-kutta solver
 Fixedstep
